frontend/test/should_fail/retype_016.grg
using attrib_model_001, enum_model_001;

rule r {
    a:Node;
    replace {
        :te<a>;
    }
}
